--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-is": "^19.2.0",
     "react-mic": "^12.4.6",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0"
